# Kaynatpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  QUICKSTART.md  README.md  STATUS.md  STORY.md  SYNTAX_QUICK_REFERENCE.md  build.sh  compile.sh
docs/: 01_getting_started.md  02_core_language.md  03_oop.md  04_dsa.md  05_gui.md  06_stdlib.md  07_grammar.md  08_errors.md  10_practical_guide.md  11_stdlib_usage.md  12_dsa_usage.md  13_oop_usage.md  14_gui_usage.md
examples/: 01_hello_world.kn  02_calculator.kn  03_fizzbuzz.kn  03_loops.kn  04_conditionals.kn  04_fibonacci.kn  05_functions.kn  06_lists.kn  06_variables.kn  07_comprehensive_test.kn  08_gui_demo.kn  09_gui_calculator.kn  10_gui_form.kn  11_working_calculator.kn  12_advanced_calculator.kn
src/: main.cpp  repl.cpp  repl.hpp
src/errors/: error_types.hpp  messages.cpp
src/gui/: gui_system.cpp  gui_system.hpp
src/interpreter/: environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp  runtime_value.cpp  runtime_value.hpp
src/lexer/: lexer.cpp  lexer.hpp  token_types.hpp
src/parser/: nodes.hpp  parser.cpp  parser.hpp
src/stdlib/: list_tools.cpp  math_tools.cpp  other_tools.cpp  stdlib.hpp  string_tools.cpp
